[update-dependencies] - Updating angular from 10 to 17 and adjusting dependencies

--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -76,7 +75,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -99,11 +97,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "captai-web:build"
+            "buildTarget": "captai-web:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "captai-web:build:production"
+              "buildTarget": "captai-web:build:production"
             }
           }
         },
