--- a/package.json
+++ b/package.json
@@ -12,49 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^2.0.3",
-    "@angular/animations": "~10.0.0",
-    "@angular/common": "~10.0.0",
-    "@angular/compiler": "~10.0.0",
-    "@angular/core": "~10.0.0",
-    "@angular/forms": "~10.0.0",
-    "@angular/platform-browser": "~10.0.0",
-    "@angular/platform-browser-dynamic": "~10.0.0",
-    "@angular/router": "~10.0.0",
-    "@webcomponents/custom-elements": "^1.0.0",
-    "bootstrap": "^4.5.0",
-    "express": "^4.17.1",
-    "jquery": "^3.5.1",
-    "jwt-decode": "^3.1.2",
-    "moment": "^2.29.1",
-    "ngx-bootstrap": "^5.6.1",
-    "ngx-currency": "^2.5.3",
-    "ngx-mask": "^10.0.1",
-    "ngx-pagination": "^5.0.0",
+    "@angular/animations": "17.0.0",
+    "@angular/common": "17.0.0",
+    "@angular/compiler": "17.0.0",
+    "@angular/core": "17.0.0",
+    "@angular/forms": "17.0.0",
+    "@angular/platform-browser": "17.0.0",
+    "@angular/platform-browser-dynamic": "17.0.0",
+    "@angular/router": "17.0.0",
+    "@webcomponents/custom-elements": "^1.6.0",
+    "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
+    "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "ngx-bootstrap": "^12.0.0",
+    "ngx-currency": "^17.0.0",
+    "ngx-mask": "^16.4.2",
+    "ngx-pagination": "^6.0.3",
+    "ngx-slider-v2": "^17.0.0",
     "popper.js": "^1.16.1",
     "property-watch-decorator": "^1.2.5",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "^0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.0",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0-next.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "@angular-devkit/build-angular": "~17.0.0",
+    "@angular/cli": "17.0.0",
+    "@angular/compiler-cli": "17.0.0",
+    "@types/jasmine": "~5.1.4",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "^20.11.6",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^5.1.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~10.9.2",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~5.2.0"
   }
 }
