--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build:prod": "ng build --prod",
+    "build:prod": "ng build --configuration=production",
     "build:test": "ng build --configuration=test",
     "test": "ng test",
     "lint": "ng lint",
