--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/compiler": "17.0.0",
     "@angular/core": "17.0.0",
     "@angular/forms": "17.0.0",
+    "@angular/material": "^17.2.1",
     "@angular/platform-browser": "17.0.0",
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
+    "@ng-select/ng-select": "^12.0.7",
     "@webcomponents/custom-elements": "^1.6.0",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
