--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "17.0.0",
     "@angular/platform-browser-dynamic": "17.0.0",
     "@angular/router": "17.0.0",
+    "@mercadopago/sdk-js": "^0.0.3",
     "@ng-select/ng-select": "^12.0.7",
+    "@types/mercadopago-sdk-js": "^2.0.15",
     "@webcomponents/custom-elements": "^1.6.0",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
