--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "src/styles.scss",
               "src/clarity-icons.scss",
-              "node_modules/@ng-select/ng-select/themes/default.theme.css"
+              "node_modules/@ng-select/ng-select/themes/default.theme.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
