--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/mercadopago-sdk-js": "^2.0.15",
     "@webcomponents/custom-elements": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
